fix: named final stage
Co-authored-by: Dominic Reber <71256590+domire8@users.noreply.github.com>

--- a/toolkits/Dockerfile.cuda
+++ b/toolkits/Dockerfile.cuda
@@ -117,7 +117,7 @@ RUN bash -c "source /opt/ros/${ROS_DISTRO}/setup.bash && \
   colcon build"
 RUN cp -r $ROS_WS/install/environment_variables /environment_variables
 
-FROM scratch
+FROM scratch AS final
 
 ARG CUDA_DEPS
 COPY --from=builder ${CUDA_DEPS} /
